# CompressFS

./: .gitignore  CMakeLists.txt  README.md
bench/: bench.sh  bench_random_read.cpp
include/compressfs/: backing_store.hpp  block_cache.hpp  block_manager.hpp  codec.hpp  fuse_ops.hpp  io_uring_engine.hpp  metadata.hpp  slab_allocator.hpp  stats.hpp
src/: backing_store.cpp  block_cache.cpp  block_manager.cpp  codec.cpp  codec_lz4.cpp  codec_zstd.cpp  fuse_ops.cpp  io_uring_engine.cpp  main.cpp  metadata.cpp  slab_allocator.cpp
tests/: test_backing_store.cpp  test_block_cache.cpp  test_block_manager.cpp  test_codec.cpp  test_crash_safety.cpp  test_fuse_ops.cpp  test_metadata.cpp  test_slab_allocator.cpp  test_stats.cpp
